# volume-knob

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
design/: fp-lib-table  sym-lib-table  volume-knob.kicad_pcb  volume-knob.kicad_pro  volume-knob.kicad_sch
design/resources/: BC847BDW1T1G.kicad_sym  SGM2212-3_3XKC3G_TR.kicad_sym  TVS_LESD5D5.0CT1G.kicad_mod
src/: button.rs  hid.rs  hid_descriptor.rs  hid_descriptor.wara  led.rs  main.rs
