[package]
name = "esp32"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32c6", "unstable"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
esp-alloc = { version = "0.6.0" }
esp-wifi = { version = "0.12.0", features = ["esp32c6", "ble", "esp-alloc"] }
log = { version = "0.4.25" }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "febf18abc4777b0227ef56b22aa6bcd78947fa24", features = [
    "macros",
    "async",
    "crypto",
] }

# The crates.io version still specifies esp-hal == ^0.22.0
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", version = "0.14.0", features = [
    "esp32c6",
] }
smart-leds = { version = "0.4.0" }
bitflags = { version = "2.8.0" }


[[bin]]
name = "esp32"
path = "src/main.rs"
test = false
doctest = false
bench = false
